--- a/.github/workflows/process.yml
+++ b/.github/workflows/process.yml
@@ -2,14 +2,13 @@ name: DeepSeek Word Processing
 
 on:
   schedule:
-    # 每天UTC时间12:00运行（北京时间20:00）
-    - cron: '0 12 * * *'
-  workflow_dispatch:  # 允许手动触发
+    - cron: '0 12 * * *'  # 每天UTC时间12:00运行（北京时间20:00）
+  workflow_dispatch:
 
 jobs:
   process:
     runs-on: ubuntu-latest
-    timeout-minutes: 360  # 最长运行6小时（免费账户限制）
+    timeout-minutes: 360  # 最长运行6小时
     
     steps:
     - name: Checkout repository
@@ -22,13 +21,15 @@ jobs:
         
     - name: Install dependencies
       run: |
+        pip install --upgrade pip
+        pip install numpy==1.24.4  # 固定兼容版本
         pip install -r src/requirements.txt
         
     - name: Run word processor
       env:
-        DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
-        BATCH_SIZE: 50  # 每批处理50个词
-        MAX_RETRIES: 3  # 最大重试次数
+        DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}  # 使用Secrets
+        BATCH_SIZE: 8
+        MAX_RETRIES: 5
       run: |
         python src/process_words.py
         
@@ -44,17 +45,9 @@ jobs:
         retention-days: 7
         
     - name: Upload final results
-      if: ${{ always() }}  # 即使失败也执行
+      if: ${{ always() }}
       uses: actions/upload-artifact@v4
       with:
         name: final-results
         path: final_results.csv
         retention-days: 30
-        
-    - name: Send notification
-      if: always()  # 无论成功失败都通知
-      uses: rtCamp/action-slack-notify@v2
-      env:
-        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-        SLACK_COLOR: ${{ job.status }}  # 根据状态变色
-        SLACK_MESSAGE: "DeepSeek处理完成! 状态: ${{ job.status }}"
